# kitconcept.seo

./: .coveragerc  .gitignore  .meta.toml  .travis.yml  CHANGELOG.md  CHANGES.md  CHANGES.rst  CONTRIBUTORS.md  LICENSE.md  MANIFEST.in  Makefile  README.md  README.rst  base.cfg  bobtemplate.cfg  buildout.cfg  instance.yaml  plone-4.3.x.cfg  plone-5.2.x.cfg  plone-6.0.x.cfg  pyproject.toml  setup.py  tox.ini
.github/workflows/: changelog.yml  config.yml  main.yml  meta.yml  tests.yml
docs/: LICENSE.md  LICENSE.rst  README.md  index.rst  pyproject.toml
docs/docs/: conf.py  glossary.md  index.md
docs/docs/concepts/: index.md
docs/docs/how-to-guides/: index.md
docs/docs/reference/: index.md
docs/docs/tutorials/: index.md
news/: +changelog.internal  +metadata.internal  +pkgutil.internal  +plone6.1.feature  +widget.bugfix  13.feature  16.internal  17.feature  2.internal  2.tests  22.feature
scripts/: create_site.py
src/kitconcept/seo/: __init__.py  configure.zcml  dependencies.zcml  events.py  interfaces.py  profiles.zcml  setuphandlers.py  subscribers.py  testing.py
src/kitconcept/seo/behaviors/: configure.zcml  seo.py
src/kitconcept/seo/browser/: configure.zcml
src/kitconcept/seo/controlpanel/: configure.zcml
src/kitconcept/seo/locales/: kitconcept.seo.pot  update.sh
src/kitconcept/seo/locales/de/LC_MESSAGES/: kitconcept.seo.po
src/kitconcept/seo/locales/es/LC_MESSAGES/: kitconcept.seo.po
src/kitconcept/seo/locales/it/LC_MESSAGES/: kitconcept.seo.po
src/kitconcept/seo/profiles/default/: browserlayer.xml  metadata.xml
src/kitconcept/seo/profiles/uninstall/: browserlayer.xml
src/kitconcept/seo/serializers/: configure.zcml
src/kitconcept/seo/setuphandlers/: __init__.py
src/kitconcept/seo/tests/: test_behaviors_seo.py  test_robot.py  test_setup.py
src/kitconcept/seo/tests/robot/: test_example.robot
src/kitconcept/seo/upgrades/: configure.zcml
tests/: conftest.py  test_behavior.py
tests/behaviors/: conftest.py  test_behavior.py
tests/setup/: test_setup_install.py  test_setup_uninstall.py
